syntax = "proto3";

package midnight;
import "google/protobuf/duration.proto";

message ServiceHealth {
  enum ServingStatus {
    SERVING_STATUS_UNSPECIFIED = 0;
    SERVING_STATUS_SERVING = 1;
    SERVING_STATUS_NOT_SERVING = 2;
  }

  string id = 1;
  string name = 2;
  ServingStatus status = 3;
  google.protobuf.Duration interval = 4;
  google.protobuf.Duration uptime = 5;
  optional string version = 6;
  optional string message = 7;
}

message ServiceHealthList {
  repeated ServiceHealth services = 1;
}